2001-11-12  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* results.ht (Links): Add testimonial from Lou Hevly, Message-Id:
	<5.1.0.14.2.20011110233040.01dc7de0@visca.com>

2001-11-07  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-pre.ht (Links): Mention `untrusted_set_sender = true' as
	an alternative to `trusted_users' for allowing use of `-f' under
	Exim.
	
2001-11-02  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* results.ht (Links): Add testimonial from Matt Armstrong
	Message-Id: <20011102235444.E9C73BD48@squeaker.lickey.com>

	* faq.ht: New FAQ entry: "I use BBDB, and every time it sees a new
	'dated' address it asks me whether I want it added to so-and-so's
	BBDB record. How can I prevent this?"

	* config-pre.ht (suffix): Clarify `suffix =' Exim syntax.

2001-11-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-server.ht: Move success reporting info from INSTALL to
	here.
	
	* config-pre.ht: New file describing configuration changes needed
	for supporting software such as the MTA.  Exim info is new.

	* config-server.ht: Sections are now just qmail and non-qmail.

2001-10-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Add configuration information for XFMail and
	Mahogany.
	
2001-10-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Add keyword address information, and also
	information on the various list files.  Also rearrange the page
	for better organization.

	* faq.ht (Links): New FAQ entry: How do I allow my ezmlm mailing
	lists to pass through TMDA?

	* config-server.ht (Links): Mention systemwide configuration file
	/etc/tmdarc.
	
2001-10-22  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* index.ht (Links): Move historical information into history.ht.
	
	* history.ht (Links): New file detailing TMDA's historical
	progress.
	
	* support-links.h: Move External Resources link to the Support